ops/k8s/core-server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: core-server
spec:
  selector:
    app: core-server
  ports:
    - name: http
      port: 80
      targetPort: http
    - name: grpc
      port: 9090
      targetPort: grpc
