ops/k8s/core-server/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: core-server
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
        - core.neogenesis.local
      secretName: core-server-ingress-tls
  rules:
    - host: core.neogenesis.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: core-server
                port:
                  name: http
